@@ -1,3 +1,7 @@
+2005-06-13 Vlad Seryakov vlad@crystalballinc.com
+
+	* restructured for more performance of udp requests
+
 2004-03-23 Vlad Seryakov vlad@crystalballinc.com
 
 	* full name compression implemented
